# AoC-2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
solutions/: CMakeLists.txt
src/: ACSolver.ipp  HttpsRequest.cpp  HttpsRequest.hpp  InputDirectoryConfig.cpp.in  InputDirectoryConfig.hpp  StartNewDay.cpp  Utilities.cpp  Utilities.ipp
triplets/: x64-linux.cmake
